stop link from wrapping

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -264,6 +264,7 @@
 				&.menu-item-has-children {
 					a {
 						padding-right: 20px;
+						white-space: nowrap;
 					}
 				}
 				&.menu-item-home {
