--- a/style.css
+++ b/style.css
@@ -11539,6 +11539,7 @@ readers do not read off random characters that represent icons */
 	}
 	.main-navigation ul > li.menu-item-has-children a {
 		padding-right: 20px;
+		white-space: nowrap;
 	}
 	.main-navigation ul > li.menu-item-home {
 		display: none;
